
Datatest Changelog
==================

COMING SOON (0.11.0)
--------------------

* Removed deprecated decorators: skip(), skipIf(), skipUnless() (use
  unittest.skip(), etc. instead).
* Removed deprecated aliases Selector and ProxyGroup.
* Removed the long-deprecated "allowed" interface.
* Removed deprecated acceptances: "specific", "limit", etc.


2020-12-17 (0.10.0)
-------------------

* Fixed bug where ValidationErrors were crashing pytest-xdist workers.

* Added tighter Pandas integration using Pandas' extension API.

  After calling the new "register_accessors()" function, your existing
  `DataFrame`, `Series`, `Index`, and `MultiIndex` objects will have
  a validate() method that can be used instead of the validate()
  function:

      import padas as pd
      import datatest as dt

      dt.register_accessors()  # <- Activate Pandas integration.

      df = pd.DataFrame(...)
      df[['A', 'B']].validate((str, int))  # <- New accessor method.

* Changed Pandas validation behavior:

  * `DataFrame` and `Series`: These objects are treated as *sequences*
    when they use a `RangeIndex` index (this is the default type
    assigned when no index is specified). And they are treated as
    *dictionaries* when they use an index of any other type--the
    index values become the dictionary keys.

  * `Index` and `MultiIndex`: These objects are treated as sequences.

* Changed `repr` behavior of Deviation to make timedeltas more readable.

* Added Predicate matching support for NumPy types `np.character`,
  `np.integer`, `np.floating`, and `np.complexfloating`.

* Added improved NaN handling:

  * Added NaN support to `accepted.keys()`, `accepted.args()`, and
    `validate.interval()`.
  * Improved existing NaN support for difference comparisons.
  * Added how-to documentation for NaN handling.

* Added data handling support for `squint.Select` objects.

* Added deprecation warnings for soon-to-be-removed functions and classes:
