@@ -23,17 +23,9 @@ from .main import DataTestProgram
 from .main import main
 
 # Data Handling API
-from ._vendor.get_reader import get_reader
 from ._working_directory import working_directory
-from ._vendor.squint import Select
-from ._vendor.squint import Query
-from ._vendor.squint import Result
 from ._vendor.repeatingcontainer import RepeatingContainer
 
-# Set module explicitly to cleanup reprs and error reporting.
-Select.__module__ = 'datatest'
-Query.__module__ = 'datatest'
-Result.__module__ = 'datatest'
 
 __version__ = '0.11.0.dev1'
 
