@@ -50,7 +50,7 @@ from ..temptable import (
     savepoint,
     table_exists,
 )
-from ..predicate import (
+from datatest._vendor.predicate import (
     MatcherObject,
     MatcherTuple,
     get_matcher,
@@ -163,25 +163,6 @@ def _is_collection_of_items(obj):
     return isinstance(obj, IterItems)
 
 
-# Temporary code for datatest deprecation warnings.
-_NO_WARNINGS = False
-def _warn(instance, stacklevel=3):
-    if _NO_WARNINGS:
-        return  # <- EXIT!
-
-    cls_name = instance.__class__.__name__
-    message = (
-        "This functionality is being moved into the 'squint' package.\n\n"
-        "See squint on PyPI:\n"
-        "  https://pypi.org/project/squint/\n\n"
-        "Install with:\n"
-        "  pip install squint\n\n"
-        "'datatest.{0}' will be removed in the future "
-        "(use 'squint.{0}' instead)"
-    ).format(cls_name)
-    warnings.warn(message, DeprecationWarning, stacklevel=stacklevel)
-
-
 class suppress_deprecation(warnings.catch_warnings):
     """Context manager to suppress DeprecationWarning messages."""
     def __enter__(self):
@@ -210,12 +191,8 @@ class Result(Iterator):
         duplicate or unhashable values. When the *evaluation_type*
         is a :py:class:`dict` or other mapping, the *iterable* must
         contain unique key-value pairs or a mapping.
-
-    .. deprecated:: 0.9.7
-        Use the :mod:`squint` project instead.
     """
     def __init__(self, iterable, evaluation_type):
-        _warn(self)  # Issue deprecation warning.
         if not isinstance(evaluation_type, type):
             msg = 'evaluation_type must be a type, found instance of {0}'
             raise TypeError(msg.format(evaluation_type.__class__.__name__))
@@ -668,9 +645,6 @@ class Query(object):
     A class to query data from a source object.
 
     See documentation for full details.
-
-    .. deprecated:: 0.9.7
-        Use the :mod:`squint` project instead.
     """
     def __init__(self, *args, **where):
         """Initialize self.
@@ -678,7 +652,6 @@ class Query(object):
         Query(columns, **where)
         Query(select, columns, **where)
         """
-        _warn(self)  # Issue deprecation warning.
         argcount = len(args)
         if argcount == 2:
             select, columns = args
@@ -714,7 +687,6 @@ class Query(object):
         If *obj* is a Query itself, a copy of the original query
         is created.
         """
-        _warn(cls)  # Issue deprecation warning.
         if isinstance(obj, Query):
             return obj.__copy__()
 
@@ -1145,31 +1117,9 @@ class Select(object):
     .. figure:: /_static/multisource.svg
        :figwidth: 75%
        :alt: Data can be loaded from multiple files.
-
-    .. deprecated:: 0.9.7
-        Use the :mod:`squint` project instead.
-
-    .. admonition:: Deprecation Notice
-        :class: warning
-
-        The existing ``Select``, ``Query``, and ``Result`` classes have
-        been moved into their own project called "squint". Squint is
-        described as a *simple query interface* for tabular data. For
-        full documentation, see :mod:`squint`.
-
-        You can install it from PyPI using pip:
-
-        .. code-block:: console
-
-            python -m pip install squint
-
-        Squint implements the same selection and querying interfaces
-        established in earlier versions of Datatest. It can serve as
-        a drop-in replacement for these now-deprecated classes.
     """
     def __init__(self, objs=None, *args, **kwds):
         """Initialize self."""
-        _warn(self)  # Issue deprecation warning.
         self._connection = DEFAULT_CONNECTION
         self._user_function_dict = dict()  # User-defined SQLite functions.
         self._table = None  # Table name.
